@@ -1,3 +1,7 @@
+2006-11-11  Matt Rice  <ratmice@gmail.com>
+
+	* Source/NSSliderCell.m: Implement copyWithZone:.
+
 2006-11-10  Matt Rice  <ratmice@gmail.com>
 
 	* Source/NSOutlineView.m: Handle rowAtPoint: returning -1.
